--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
       </div>
           <div class="collapse navbar-collapse navHeaderCollapse">
             <ul class="nav navbar-nav navbar-right">
-				<li><a class="noselect" id="musicBtnA" href="#"><img id="musicOn" class="musicBtn" src="assets/sound_on.svg"/><img id="musicOff" class="musicBtn" src="assets/sound_off.svg"/></a></li>
+				<li><a class="noselect" id="musicBtnA" href="#"><img id="musicOn" class="musicBtn" src="assets/music_on.svg"/><img id="musicOff" class="musicBtn" src="assets/music_off.svg"/></a></li>
 				<li><a class="noselect" id="sndBtnA" href="#"><img id="sndOn" class="soundsBtn" src="assets/sound_on.svg"/><img id="sndOff" class="soundsBtn" src="assets/sound_off.svg"/></a></li>
 				<li><a href="#" id="achievementsBtn"><div id="achievementsBtnImg"></div></a></li>
 				<li><a href="#" id="statisticsBtn"><div id="statisticsBtnImg"></div></a></li>
